Refactor code structure and remove redundant functions

--- a/devWebI/aula/flexbox-layout/layout1/layout1.html
+++ b/devWebI/aula/flexbox-layout/layout1/layout1.html
@@ -16,35 +16,31 @@
         </nav>
     </header>
 
-    <main class="produtos">
-        <section class="linha">
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                <p>Bicicletas</p>
-            </div>
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Carros" />
-                <p>Carros</p>
-            </div>
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Barcos" />
-                <p>Barcos</p>
-            </div>
-        </section>
-        <section class="linha">
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Calças" />
-                <p>Calças</p>
-            </div>
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Bermudas" />
-                <p>Bermudas</p>
-            </div>
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Camisas" />
-                <p>Camisas</p>
-            </div>
-        </section>
+    <main class="conteudo">
+        <div class="item">
+            <img src="../image/paisagem.jpg" alt="Bicicletas">
+            <p>Bicicletas</p>
+        </div>
+        <div class="item">
+            <img src="../image/paisagem.jpg" alt="Bicicletas">
+            <p>Bicicletas</p>
+        </div>
+        <div class="item">
+            <img src="../image/paisagem.jpg" alt="Bicicletas">
+            <p>Bicicletas</p>
+        </div>
+        <div class="item">
+            <img src="../image/paisagem.jpg" alt="Bicicletas">
+            <p>Bicicletas</p>
+        </div>
+        <div class="item">
+            <img src="../image/paisagem.jpg" alt="Bicicletas">
+            <p>Bicicletas</p>
+        </div>
+        <div class="item">
+            <img src="../image/paisagem.jpg" alt="Bicicletas">
+            <p>Bicicletas</p>
+        </div>
     </main>
 </body>
 </html>
