refatora estrutura HTML e CSS para melhorar a apresentação das notícias e sugestões

--- a/devWebI/aula/flexbox-layout/layout2/layout2.html
+++ b/devWebI/aula/flexbox-layout/layout2/layout2.html
@@ -16,21 +16,23 @@
     </nav>
   </header>
 
-  <main class="noticias">
-    <div class="card grande">
-      <img src="../image/paisagem.jpg" alt="Alimentação Saudável">
-      <div class="titulo">Alimentação Saudável</div>
-    </div>
-    <div class="coluna">
-      <div class="card pequeno">
-        <img src="../image/paisagem.jpg" alt="TI">
-        <div class="titulo">Como é trabalhar com TI</div>
+  <main class="conteudo">
+    <section class="noticia-grande">
+      <div class="item-grande">
+        <img src="../image/paisagem.jpg" alt="Comida">
+        <p class="legenda">Alimentacao Saudavel</p>
       </div>
-      <div class="card pequeno">
-        <img src="../image/paisagem.jpg" alt="Exercício">
-        <div class="titulo">Benefícios dos Exercícios Físicos</div>
+    </section>
+    <section class="lista-noticias">
+      <div class="noticia-pequena">
+        <img src="../image/paisagem.jpg" alt="Comida">
+        <p class="legenda">Como e trabalhar com TI</p>
       </div>
-    </div>
+      <div class="noticia-pequena">
+        <img src="../image/paisagem.jpg" alt="Comida">
+        <p class="legenda">Beneficios do exercicio fisico</p>
+      </div>
+    </section>
   </main>
 </body>
 </html>
