adiciona seções de vídeos e sugestões com estrutura HTML e CSS

--- a/devWebI/aula/flexbox-layout/layout4/layout4.html
+++ b/devWebI/aula/flexbox-layout/layout4/layout4.html
@@ -16,54 +16,54 @@
         </nav>
     </header>
     <main class="conteudo">
-        <div class="linha">
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                <p>Video 1</p>
-            </div>
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                <p>Video 2</p>
-            </div>
-            <div class="card">
-                <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                <p>Video 3</p>
-            </div>
+      <section class="videos">
+        <div class="video">
+          <div class="imagem"></div>
+          <div class="legenda"></div>
         </div>
-        <div class="listas">
-            <div class="banner">
-                <div class="quadro"></div>
-                <p>Banner</p>
-            </div>
-            <div class="lista">
-                <div class="card-pequeno">
-                    <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                    <p>Bicicletas</p>
-                </div>
-                <div class="card-pequeno">
-                    <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                    <p>Bicicletas</p>
-                </div>
-                <div class="card-pequeno">
-                    <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                    <p>Bicicletas</p>
-                </div>
-            </div>
-            <div class="lista">
-                <div class="card-pequeno">
-                    <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                    <p>Bicicletas</p>
-                </div>
-                <div class="card-pequeno">
-                    <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                    <p>Bicicletas</p>
-                </div>
-                <div class="card-pequeno">
-                    <img src="../image/paisagem.jpg" alt="Bicicletas" />
-                    <p>Bicicletas</p>
-                </div>
-            </div>
+        <div class="video">
+          <div class="imagem"></div>
+          <div class="legenda"></div>
         </div>
+        <div class="video">
+          <div class="imagem"></div>
+          <div class="legenda"></div>
+        </div>
+      </section>
+      <section class="sugestoes">
+        <div class="banner">
+          <div class="imagem-banner"></div>
+          <div class="titulo-banner"></div>
+        </div>
+        <div class="lista-sugestao">
+          <div class="sugestao">
+            <div class="imagem-sugestao"></div>
+            <div class="nome-sugestao"></div>
+          </div>
+          <div class="sugestao">
+            <div class="imagem-sugestao"></div>
+            <div class="nome-sugestao"></div>
+          </div>
+          <div class="sugestao">
+            <div class="imagem-sugestao"></div>
+            <div class="nome-sugestao"></div>
+          </div>
+        </div>
+         <div class="lista-sugestao">
+          <div class="sugestao">
+            <div class="imagem-sugestao"></div>
+            <div class="nome-sugestao"></div>
+          </div>
+          <div class="sugestao">
+            <div class="imagem-sugestao"></div>
+            <div class="nome-sugestao"></div>
+          </div>
+          <div class="sugestao">
+            <div class="imagem-sugestao"></div>
+            <div class="nome-sugestao"></div>
+          </div>
+        </div>
+      </section>
     </main>
 </body>
 </html>
