--- a/devWebI/aula/flexbox-layout/layout4/layout4.html
+++ b/devWebI/aula/flexbox-layout/layout4/layout4.html
@@ -15,131 +15,59 @@
             <a href="#">Contato</a>
         </nav>
     </header>
-    <main class="conteudo">
-      <section class="videos">
-        <div class="video">
-          <div class="imagem"></div>
-          <div class="legenda"></div>
+  <main class="conteudo">
+    <section class="videos">
+      <div class="video">
+        <div class="imagem" style="background-image: url('../image/paisagem.jpg');"></div>
+        <div class="legenda">Bicicleta Elétrica</div>
+      </div>
+      <div class="video">
+        <div class="imagem" style="background-image: url('../image/paisagem.jpg');"></div>
+        <div class="legenda">Passeio de Barco</div>
+      </div>
+      <div class="video">
+        <div class="imagem" style="background-image: url('../image/paisagem.jpg');"></div>
+        <div class="legenda">Carro Elétrico Azul</div>
+      </div>
+    </section>
+
+    <section class="sugestoes">
+      <div class="banner">
+        <div class="imagem-banner" style="background-image: url('../image/paisagem.jpg');"></div>
+        <div class="titulo-banner">Mega Promoção da Semana</div>
+      </div>
+
+      <div class="lista-sugestao">
+        <div class="sugestao">
+          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+          <div class="nome-sugestao">Camisas</div>
         </div>
-        <div class="video">
-          <div class="imagem"></div>
-          <div class="legenda"></div>
+        <div class="sugestao">
+          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>  
+          <div class="nome-sugestao">Calças</div>
         </div>
-        <div class="video">
-          <div class="imagem"></div>
-          <div class="legenda"></div>
+        <div class="sugestao">
+          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+          <div class="nome-sugestao">Bermudas</div>
         </div>
-      </section>
-      <section class="sugestoes">
-        <div class="banner">
-          <div class="imagem-banner"></div>
-          <div class="titulo-banner"></div>
+      </div>
+
+      <div class="lista-sugestao">
+        <div class="sugestao">
+          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+          <div class="nome-sugestao">Tênis</div>
         </div>
-        <div class="lista-sugestao">
-          <div class="sugestao">
-            <div class="imagem-sugestao"></div>
-            <div class="nome-sugestao"></div>
-          </div>
-          <div class="sugestao">
-            <div class="imagem-sugestao"></div>
-            <div class="nome-sugestao"></div>
-          </div>
-          <div class="sugestao">
-            <div class="imagem-sugestao"></div>
-            <div class="nome-sugestao"></div>
-          </div>
+        <div class="sugestao">
+          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+          <div class="nome-sugestao">Mochilas</div>
         </div>
-         <div class="lista-sugestao">
-          <div class="sugestao">
-            <div class="imagem-sugestao"></div>
-            <div class="nome-sugestao"></div>
-          </div>
-          <div class="sugestao">
-            <div class="imagem-sugestao"></div>
-            <div class="nome-sugestao"></div>
-          </div>
-          <div class="sugestao">
-            <div class="imagem-sugestao"></div>
-            <div class="nome-sugestao"></div>
-          </div>
+        <div class="sugestao">
+          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+          <div class="nome-sugestao">Bonés</div>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
 
-<!-- <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Loja</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header class="topo">
-    <div class="logo">Logo</div>
-    <nav class="menu">
-      <a href="#">Sobre</a>
-      <a href="#">Produtos</a>
-      <a href="#">Contato</a>
-    </nav>
-  </header>
-
-  <main class="conteudo">
-
-    <div class="videos">
-      <div class="card">
-        <img src="../image/paisagem.jpg" alt="Bicicletas" />
-        <p>Vídeo 1</p>
-      </div>
-      <div class="card">
-        <img src="../image/paisagem.jpg" alt="Bicicletas" />
-        <p>Vídeo 2</p>
-      </div>
-      <div class="card">
-        <img src="../image/paisagem.jpg" alt="Bicicletas" />
-        <p>Vídeo 3</p>
-      </div>
-    </div>
-
-    <div class="listas">
-      <div class="banner">
-        <div class="quadro"></div>
-        <p>Banner</p>
-      </div>
-
-      <div class="lista">
-        <div class="card-pequeno">
-          <img src="../image/paisagem.jpg" alt="Bicicletas" />
-          <p>Bicicletas</p>
-        </div>
-        <div class="card-pequeno">
-          <img src="../image/paisagem.jpg" alt="Bicicletas" />
-          <p>Bicicletas</p>
-        </div>
-        <div class="card-pequeno">
-          <img src="../image/paisagem.jpg" alt="Bicicletas" />
-          <p>Bicicletas</p>
-        </div>
-      </div>
-
-      <div class="lista">
-        <div class="card-pequeno">
-          <img src="../image/paisagem.jpg" alt="Bicicletas" />
-          <p>Bicicletas</p>
-        </div>
-        <div class="card-pequeno">
-          <img src="../image/paisagem.jpg" alt="Bicicletas" />
-          <p>Bicicletas</p>
-        </div>
-        <div class="card-pequeno">
-          <img src="../image/paisagem.jpg" alt="Bicicletas" />
-          <p>Bicicletas</p>
-        </div>
-      </div>
-    </div>
-
-  </main>
-</body>
-</html> -->
