refatora a seção de sugestões para melhorar a estrutura e responsividade

--- a/devWebI/aula/flexbox-layout/layout4/layout4.html
+++ b/devWebI/aula/flexbox-layout/layout4/layout4.html
@@ -37,33 +37,34 @@
         <div class="titulo-banner">Mega Promoção da Semana</div>
       </div>
 
-      <div class="lista-sugestao">
-        <div class="sugestao">
-          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
-          <div class="nome-sugestao">Camisas</div>
+      <div class="bloco-sugestoes">
+        <div class="coluna-sugestoes">
+          <div class="sugestao">
+            <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+            <div class="nome-sugestao">Camisas</div>
+          </div>
+          <div class="sugestao">
+            <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+            <div class="nome-sugestao">Calças</div>
+          </div>
+          <div class="sugestao">
+            <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+            <div class="nome-sugestao">Bermudas</div>
+          </div>
         </div>
-        <div class="sugestao">
-          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>  
-          <div class="nome-sugestao">Calças</div>
-        </div>
-        <div class="sugestao">
-          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
-          <div class="nome-sugestao">Bermudas</div>
-        </div>
-      </div>
-
-      <div class="lista-sugestao">
-        <div class="sugestao">
-          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
-          <div class="nome-sugestao">Tênis</div>
-        </div>
-        <div class="sugestao">
-          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
-          <div class="nome-sugestao">Mochilas</div>
-        </div>
-        <div class="sugestao">
-          <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
-          <div class="nome-sugestao">Bonés</div>
+        <div class="coluna-sugestoes">
+          <div class="sugestao">
+            <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+            <div class="nome-sugestao">Tênis</div>
+          </div>
+          <div class="sugestao">
+            <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+            <div class="nome-sugestao">Mochilas</div>
+          </div>
+          <div class="sugestao">
+            <div class="imagem-sugestao" style="background-image: url('../image/paisagem.jpg');"></div>
+            <div class="nome-sugestao">Bonés</div>
+          </div>
         </div>
       </div>
     </section>
