Adiciona formulário HTML e estilos CSS para entrada de dados

--- a/devWebI/aula/formularios/index.html
+++ b/devWebI/aula/formularios/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Formularios</title>
 </head>
 <body>
-    
+    <form id="frm" method="post" action="salvar.html">
+
+        <h2>Input Text</h2>
+        <label for="nomecompleto">Nome Completo:</label>
+        <input type="text" name="nomecompleto" id="nomecompleto" size="50" maxlength="10" placeholder="Digite o seu nome completo" class="destaque">
+        <!-- name se usa no server side
+        id se usa no client side -->
+        <br><br>
+
+
+    </form>
 </body>
 </html>
