corrige a função mudacor para incluir o parâmetro backgroundColor e atualiza a cor de fundo do documento

--- a/devWebI/aula/formularios/index.html
+++ b/devWebI/aula/formularios/index.html
@@ -35,9 +35,10 @@
             alert("Seja bem vindo: " + nome.value);
         }
 
-        function mudacor(cor) {
+        function mudacor(cor,backgroundColor) {
             var corhexa = document.getElementById("corhexa");
             corhexa.innerHTML = cor.value;
+            document.body.style.backgroundColor = cor.value;
             // corhexa.textContent = cor.value;
         } 
     </script>
