remove parâmetro desnecessário da função mudacor

--- a/devWebI/aula/formularios/index.html
+++ b/devWebI/aula/formularios/index.html
@@ -35,7 +35,7 @@
             alert("Seja bem vindo: " + nome.value);
         }
 
-        function mudacor(cor,backgroundColor) {
+        function mudacor(cor) {
             var corhexa = document.getElementById("corhexa");
             corhexa.innerHTML = cor.value;
             document.body.style.backgroundColor = cor.value;
