adiciona textarea ao formulário e exibe contagem de caracteres

--- a/devWebI/aula/formularios/index.html
+++ b/devWebI/aula/formularios/index.html
@@ -102,6 +102,7 @@
 
         <h2>Textarea</h2>
         <textarea name="texto" id="texto" cols="30" rows="10" placeholder="Digite o seu texto aqui..."></textarea>
+        <span id="">0/100</span>
 
     </form>
 
