adiciona textarea com contagem de caracteres e função de atualização dinâmica

--- a/devWebI/aula/formularios/index.html
+++ b/devWebI/aula/formularios/index.html
@@ -101,8 +101,8 @@
         </select>
 
         <h2>Textarea</h2>
-        <textarea name="texto" id="texto" cols="30" rows="10" placeholder="Digite o seu texto aqui..."></textarea>
-        <span id="">0/100</span>
+        <textarea name="texto" id="texto" cols="30" rows="10" maxlength="100" placeholder="Digite o seu texto aqui..." oninput="atualizarContador()"></textarea>
+        <span id="contador">0/100</span>
 
     </form>
 
@@ -139,6 +139,12 @@
             var valoridade = document.getElementById("valoridade");
             valoridade.innerHTML = idade.value;
         }    
+
+        function atualizarContador() {
+            var texto = document.getElementById("texto");
+            var contador = document.getElementById("contador");
+            contador.textContent = texto.value.length + "/100";
+        }
     </script>
 
 </body>
