--- a/devWebI/aula/formularios/index.html
+++ b/devWebI/aula/formularios/index.html
@@ -101,7 +101,9 @@
         </select>
 
         <h2>Textarea</h2>
-        <textarea name="texto" id="texto" cols="30" rows="10" maxlength="100" placeholder="Digite o seu texto aqui..." oninput="atualizarContador()"></textarea>
+        <textarea name="texto" id="texto" cols="30" rows="10" maxlength="100" placeholder="Digite o seu texto aqui..."
+        maxlength="100"
+        oninput="atualizarContador(this)"></textarea>
         <span id="contador">0/100</span>
 
     </form>
@@ -140,10 +142,9 @@
             valoridade.innerHTML = idade.value;
         }    
 
-        function atualizarContador() {
-            var texto = document.getElementById("texto");
-            var contador = document.getElementById("contador");
-            contador.textContent = texto.value.length + "/100";
+        function atualizarContador(texto) {
+            var qtdTexto = document.getElementById("contador");
+            qtdTexto.innerHTML = texto.value.length + "/100";
         }
     </script>
 
